added back SdkTray

--- a/TestOrge3D/Ogre/Configs/resources.cfg
+++ b/TestOrge3D/Ogre/Configs/resources.cfg
@@ -11,6 +11,7 @@ FileSystem=Media/RTShaderLib/materials
 Zip=Media/packs/cubemap.zip
 Zip=Media/packs/cubemapsJS.zip
 Zip=Media/packs/skybox.zip
+Zip=Media/packs/SdkTrays.zip
 
 [General]
 FileSystem=Media
